# kicad_ESP32_base

./: .gitignore  ESP32_base.csv  ESP32_base.kicad_dru  ESP32_base.kicad_pcb  ESP32_base.kicad_prl  ESP32_base.kicad_pro  ESP32_base.kicad_sch  ESP32_base.xml
firmware/: CMakeLists.txt  bte_client.py  build.sh  deploy.sh  partitions.csv  sdkconfig.defaults  sdkconfig.old  wifi.c
firmware/.cache/clangd/index/: ble.c.69843AC0BE75EE3A.idx  ble.cpp.7F5A5DBD551DDF5B.idx  ble.h.6F0BB7216EC052EC.idx  ble.hpp.4E4BAA1686B2285C.idx  bt_icon.c.80FD84C450D84BF7.idx  cJSON.c.9F4649DACCA808A8.idx  cJSON.h.9AA5672F75B46EE8.idx  cJSON_Utils.c.47D2C48348D31B84.idx  cJSON_Utils.h.2B159BD3CC3A162F.idx  esp_lcd_st7735.c.10C20C15B1BE5177.idx  esp_lcd_st7735.h.224BC34B629DF032.idx  font5x7.h.068B51A4D5C65817.idx  font5x7.hpp.78439DEE36D830F9.idx  lcd.c.DE2B2C2100DBFB82.idx  lcd.cpp.F54F8F00D0FAC4E8.idx  lcd.h.41F2440E906C9586.idx  lcd.hpp.48AD2720D9C63343.idx  main.c.65F517E74C19B82C.idx  main.c.BD552A032AC6019B.idx  main.cpp.C22AE2F165C2696C.idx  ota.c.10C4F6D5B73A6275.idx  ota.cpp.BFD778FA22A97D40.idx  (+27 more)
firmware/src/: CMakeLists.txt  ble.cpp  ble.hpp  bt_icon.c  font5x7.hpp  idf_component.yml  lcd.cpp  lcd.hpp  lcd_old.cpp  main.cpp  ota.cpp  ota.hpp  pin_config.hpp  qr_display.cpp  qr_display.hpp  qrcodegen.c  qrcodegen.h  temperature.cpp  temperature.hpp  temperature_new.hpp  touch.cpp  touch.hpp  webserver.cpp  webserver.hpp  wifi.cpp  wifi.hpp  wifi_icon.c  wifi_prov.cpp  wifi_prov.hpp
footprints/pwa.pretty/: BadApple.kicad_mod  USB-C_SMD-TYPE-C-31-M-12_1.kicad_mod
